getting_started/test_files/syntax_errors/InvalidMethodCall2.cpm
class MyClass {
  Init(): boolean {
    volatile test: int

    test := Init(1,)

    return false
  }
}

main() : int {
  print(MyClass().Init())
  return 0
}
